# crazydog

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  deps.repos  docker-compose.yml
scripts/: build.sh  entrypoint.sh  setup.sh
src/go2_behavior/: Cargo.toml  package.xml
src/go2_behavior/src/: main.rs
src/go2_bringup/: CMakeLists.txt  package.xml
src/go2_bringup/config/: go2_rviz.rviz
src/go2_bringup/launch/: sim.launch.py
src/go2_bringup/worlds/: empty.sdf
src/go2_config/: CMakeLists.txt  package.xml
src/go2_config/config/: gait.yaml  joints.yaml  links.yaml
src/go2_config/launch/: champ.launch.py
src/go2_description/: CMakeLists.txt  package.xml
src/go2_description/config/: ros2_controllers.yaml
src/go2_description/meshes/: README.md
src/go2_description/urdf/: go2.urdf.xacro
src/go2_detector/: Cargo.toml  package.xml
src/go2_detector/src/: main.rs
src/go2_gait/: Cargo.toml  package.xml
src/go2_gait/src/: main.rs
src/go2_siren/: Cargo.toml  package.xml
src/go2_siren/src/: main.rs
src/go2_teleop/: Cargo.toml  package.xml
src/go2_teleop/src/: main.rs
