<?xml version="1.0"?>
<package format="3">
  <name>go2_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files for the Unitree Go2 — both Gazebo simulation and real-hardware
    bringup. Depends on go2_description, ros2_control and gazebo_ros2_control.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>go2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
