<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_config</name>
  <version>0.0.0</version>
  <description>CHAMP configuration for Unitree Go2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>champ</exec_depend>
  <exec_depend>champ_bringup</exec_depend>
  <exec_depend>champ_description</exec_depend>
  <exec_depend>champ_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
