<?xml version="1.0"?>
<package format="3">
  <name>go2_description</name>
  <version>0.1.0</version>
  <description>
    URDF/XACRO description of the Unitree Go2 quadruped robot.
    Provides meshes, collision geometry and ros2_control hardware interface
    configuration for Gazebo Harmonic simulation.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
