<?xml version="1.0"?>
<package format="3">
  <name>go2_gait</name>
  <version>0.1.0</version>
  <description>
    Rust — trot gait generator and inverse-kinematics stub for the Unitree Go2.
    Converts /cmd_vel Twist commands into per-joint position targets.
    Publishes /go2_joint_controller/commands (Float64MultiArray).
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
