[package]
name    = "go2_siren"
version = "0.1.0"
edition = "2024"
description = "Siren light controller node for the Unitree Go2 guard dog (ROS 2 / rclrs)"
license = "Apache-2.0"

[[bin]]
name = "go2_siren"
path = "src/main.rs"

[dependencies]
rclrs         = { workspace = true }
std_msgs      = { workspace = true }
anyhow        = { workspace = true }
log           = { workspace = true }
env_logger    = { workspace = true }
