[package]
name    = "go2_teleop"
version = "0.1.0"
edition = "2024"
description = "Keyboard teleop node for the Unitree Go2 (ROS 2 / rclrs)"
license = "Apache-2.0"

[[bin]]
name = "go2_teleop"
path = "src/main.rs"

[dependencies]
rclrs         = { workspace = true }
geometry_msgs = { workspace = true }
std_msgs      = { workspace = true }
anyhow        = { workspace = true }
log           = { workspace = true }
env_logger    = { workspace = true }
# Raw terminal I/O without ncurses — cross-platform, no unsafe
termios       = "0.3"
